[package]
name = "authorized_derive"
version = "0.1.0"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
edition = "2018"
description = "Derive for authorized crate"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.10.2"
syn = "1.0.14"
quote = "1.0.2"
proc-macro2= "1.0.8"
