[package]
name = "tests"
version = "0.1.0"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
authorized = { path = "../authorized"}
# authorized = { path = "../authorized", features = ["with_serde"]}
# serde = "*"
# serde_json = "*"
